<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.fahad.nashra.SelectGameActivity">

    <TextView
        android:id="@+id/bintID"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:background="@color/bint_acc"
        android:drawableRight="@drawable/bint_icn"
        android:onClick="directBint"
        android:paddingBottom="5dp"
        android:paddingRight="8dp"
        android:paddingTop="5dp"
        android:text="@string/bint"
        android:textAlignment="textStart"
        android:textSize="36sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BalootID" />

    <TextView
        android:id="@+id/trixID"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:background="@color/trix_acc"
        android:drawableRight="@drawable/trix_icn"
        android:paddingBottom="5dp"
        android:paddingRight="8dp"
        android:paddingTop="5dp"
        android:text="@string/trix"
        android:textAlignment="textStart"
        android:textSize="36sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/KamTakelID" />

    <TextView
        android:id="@+id/KamTakelID"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:background="@color/kamt_acc"
        android:drawableRight="@drawable/kamt_icn"
        android:fontFamily="sans-serif"
        android:paddingBottom="5dp"
        android:paddingRight="8dp"
        android:paddingTop="5dp"
        android:text="@string/kamTakel"
        android:textAlignment="textStart"
        android:textSize="36sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bintID" />

    <TextView
        android:id="@+id/BalootID"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:background="@color/baloot_acc"
        android:drawableRight="@drawable/baloot_icn"
        android:onClick="directBaloot"
        android:paddingBottom="5dp"
        android:paddingRight="8dp"
        android:paddingTop="5dp"
        android:text="@string/baloot"
        android:textAlignment="textStart"
        android:textSize="36sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeID" />

    <TextView
        android:id="@+id/welcomeID"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:background="@color/bg_acc"
        android:onClick="directBaloot"
        android:padding="4dp"
        android:text="@string/welcome_sentence"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>
