<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.fahad.nashra.BalootActivity"
    tools:layout_editor_absoluteY="25dp"
    tools:layout_editor_absoluteX="0dp"
    android:background="@color/white">

    <Button
        android:id="@+id/editLastScore"
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/bint_acc"
        android:ems="10"
        android:inputType="none"
        android:onClick="editLastGame"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:text="@string/edit_last_score"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textIsSelectable="false"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player1Text"
        tools:ignore="RtlHardcoded" />

    <include layout="@layout/keypad"></include>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription=""
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baloot_icn"
        tools:ignore="RtlHardcoded" />

    <EditText
        android:id="@+id/themEnter"
        android:layout_width="50dp"
        android:layout_height="28dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/bint_acc"
        android:ems="10"
        android:hint="0"
        android:inputType="none"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:selectAllOnFocus="false"
        android:singleLine="true"
        android:textAlignment="textEnd"
        android:textColor="@android:color/background_dark"
        android:textIsSelectable="true"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/thirdGuideline"
        app:layout_constraintTop_toTopOf="@+id/divideVertical" />

    <Button
        android:id="@+id/change_game_btn"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
        android:ems="10"
        android:inputType="none"
        android:onClick="returnBack"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        android:text="@string/change_game"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/bint_acc"
        android:textIsSelectable="false"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/newGame"
        android:layout_width="88dp"
        android:layout_height="30dp"
        android:layout_marginLeft="8dp"
        android:background="@color/bint_acc"
        android:ems="10"
        android:inputType="none"
        android:onClick="newGame"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:text="@string/newGame"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textIsSelectable="false"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/change_game_btn"
        app:layout_constraintLeft_toRightOf="@+id/change_game_btn"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/register_btn"
        android:layout_width="88dp"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
        android:ems="10"
        android:inputType="none"
        android:onClick="registerResult"
        android:selectAllOnFocus="false"
        android:singleLine="true"
        android:text="@string/register"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/bint_acc"
        android:textIsSelectable="false"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divideVertical"
        tools:layout_editor_absoluteY="377dp" />

    <EditText
        android:id="@+id/usEnter"
        android:layout_width="50dp"
        android:layout_height="28dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/bint_acc"
        android:ems="10"
        android:hint="0"
        android:inputType="none"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:selectAllOnFocus="false"
        android:singleLine="true"
        android:textAlignment="textEnd"
        android:textColor="@android:color/background_dark"
        android:textIsSelectable="true"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="@+id/thirdGuideline"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/divideVertical" />

    <TextView
        android:id="@+id/player5Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/them"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/thirdGuideline"
        app:layout_constraintBaseline_toBaselineOf="@+id/player1Text" />

    <TextView
        android:id="@+id/themScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="0"
        android:textSize="30sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/player1Score"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/thirdGuideline"
        app:layout_constraintTop_toBottomOf="@+id/player5Text" />

    <TextView
        android:id="@+id/player1Score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="0"
        android:textAppearance="@android:style/TextAppearance.Material.Small"
        android:textSize="30sp"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintLeft_toLeftOf="@+id/thirdGuideline"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player1Text" />

    <TextView
        android:id="@+id/gameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/nashra_baloot"
        android:textSize="18sp"
        app:layout_constraintRight_toLeftOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/player1Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/us"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@+id/thirdGuideline"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/gameTitle" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/thirdGuideline"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="180dp" />

    <android.support.constraint.Guideline
        android:id="@+id/divideVertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65"
        tools:layout_editor_absoluteY="369dp"
        tools:layout_editor_absoluteX="0dp" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/kamt_acc"
        app:layout_constraintBottom_toTopOf="@+id/divideVertical"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player1Score"
        app:layout_constraintVertical_bias="0.0">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/usBoard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerInParent="true"
                android:orientation="vertical"
                android:textDirection="ltr"
                app:layout_constraintLeft_toLeftOf="@+id/scrollHalfGuide"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/usLastRecord"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="-/0"
                    android:textAlignment="center"
                    android:textAppearance="@style/record_typo" />

            </LinearLayout>

            <View
                android:id="@+id/boardDivider"
                style="@style/Divider"
                android:layout_marginTop="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <android.support.constraint.Guideline
                android:id="@+id/scrollHalfGuide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5"
                tools:layout_editor_absoluteX="180dp"
                tools:layout_editor_absoluteY="136dp" />

            <LinearLayout
                android:id="@+id/themBoard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerInParent="true"
                android:orientation="vertical"
                android:textDirection="ltr"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/scrollHalfGuide"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/themLastRecord"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="-/0"
                    android:textAlignment="center"
                    android:textAppearance="@style/record_typo" />

            </LinearLayout>

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
